--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="css/normalice.css" />
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="css/animacion.css" />
 
@@ -41,92 +42,95 @@
           alt=""
           title="Elegir un pokemon"
         />
-        <h1 class="header__title">POKEDEX</h1>
+        <h1 class="header__title">POKÉDEX_</h1>
       </header>
 
       <main>
-        <div class="container_left">
-          <figure class="cardTitle">
+        <div class="card">
+          <figure class="card__title">
             <img
-              class="cardTitle__icon"
+              class="card__title-icon"
               id="pokeIcon"
               src="images/fire_icon-icons.com_70969.png"
               alt="iconTypePokemon"
             />
-            <figcaption class="cardTitle__title">CHARIZARD</figcaption>
+            <figcaption class="card__title-name" id="pokeName">
+              CHARIZARD
+            </figcaption>
           </figure>
 
-          <figure class="cardImage">
-            <img class="cardImage__img" src="images/Mewtow.png" alt="pokemon" />
+          <figure class="card__image">
+            <img
+              class="card__image-poke"
+              src="images/Mewtow.png"
+              alt="pokemon"
+              id="pokeImg"
+            />
           </figure>
         </div>
 
-        <div class="container_right">
-          <article class="stats">
-            <h3 class="stats__title">NO.</h3>
-            <p class="baseStat" id="pokeOrder">100</p>
-          </article>
-          <article class="stats">
-            <h3 class="stats__title">LEVEL</h3>
-            <p class="baseStat" id="pokeLevel">FIRE</p>
-          </article>
-          <article class="stats">
-            <h3 class="stats__title">TYPE</h3>
-            <p class="baseStat" id="pokeType">1.7m</p>
-          </article>
-          <article class="stats">
-            <h3 class="stats__title">ABILITY</h3>
-            <p class="baseStat" id="pokeAbility">19.0kg</p>
-          </article>
-          <article class="stats">
-            <h3 class="stats__title">HEIGHT</h3>
-            <p class="baseStat" id="pokeHeight">45m.</p>
-          </article>
-          <article class="stats">
-            <h3 class="stats__title">WEIGHT</h3>
-            <p class="baseStat" id="pokeWeight">142kg.</p>
-          </article>
-        </div>
+        <article class="stats">
+          <section class="stats__general">
+            <h3 class="stats__general-title">NO.</h3>
+            <p class="stats__general-base" id="pokeOrder">100</p>
+          </section>
+          <section class="stats__general">
+            <h3 class="stats__general-title">LEVEL</h3>
+            <p class="stats__general-base" id="pokeLevel">FIRE</p>
+          </section>
+          <section class="stats__general">
+            <h3 class="stats__general-title">TYPE</h3>
+            <p class="stats__general-base" id="pokeType">1.7m</p>
+          </section>
+          <section class="stats__general">
+            <h3 class="stats__general-title">ABILITY</h3>
+            <p class="stats__general-base" id="pokeAbility">19.0kg</p>
+          </section>
+          <section class="stats__general">
+            <h3 class="stats__general-title">HEIGHT</h3>
+            <p class="stats__general-base" id="pokeHeight">45m.</p>
+          </section>
+          <section class="stats__general">
+            <h3 class="stats__general-title">WEIGHT</h3>
+            <p class="stats__general-base" id="pokeWeight">142kg.</p>
+          </section>
+        </article>
       </main>
 
-      <footer class="footer">
+      <footer class="footer" id="pokeContainer">
         <h3 class="footer__title">OTHERS</h3>
 
-        <div class="pokeBottom">
-          <figure class="pokeBlack">
+        <div class="footer__minis">
+          <figure class="footer__minis-poke">
             <img
-              class="pokeBlack__img"
-              src="images/sqBlack.png"
-              onmouseover="this.src='images/sq.png'"
-              onmouseout="this.src='images/sqBlack.png'"
+              class="footer__minis-img"
+              src="images/sq.png"
               alt="iconBlack"
+              id="poke1"
             />
           </figure>
-          <figure class="pokeBlack">
+          <figure class="footer__minis-poke">
             <img
-              class="pokeBlack__img"
-              src="images/RaichuBlack.png"
-              onmouseover="this.src='images/Raichu.png'"
-              onmouseout="this.src='images/RaichuBlack.png'"
+              class="footer__minis-img"
+              src="images/Raichu.png"
               alt="iconBlack"
+              id="poke2"
             />
           </figure>
-          <figure class="pokeBlack">
+          <figure class="footer__minis-poke">
             <img
-              class="pokeBlack__img"
-              src="images/bbBlack.png"
-              onmouseover="this.src='images/bb.png'"
-              onmouseout="this.src='images/bbBlack.png'"
+              class="footer__minis-img"
+              src="images/bb.png"
               alt="iconBlack"
+              id="poke3"
             />
           </figure>
-          <figure class="pokeBlack">
+          <figure class="footer__minis-poke">
             <img
-              class="pokeBlack__img"
-              src="images/ducBlack.png"
-              onmouseover="this.src='images/duc.png'"
-              onmouseout="this.src='images/ducBlack.png'"
+              class="footer__minis-img"
+              src="images/duc.png"
               alt="iconBlack"
+              id="poke4"
             />
           </figure>
         </div>
