--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
 
       <main>
         <div class="card">
-          <figure class="card__title">
+          <figure class="card__figure">
             <img
-              class="card__title-icon"
+              class="card__icon"
               id="pokeIcon"
               src="images/fire_icon-icons.com_70969.png"
               alt="iconTypePokemon"
             />
-            <figcaption class="card__title-name" id="pokeName">
+            <figcaption class="card__caption" id="pokeName">
               CHARIZARD
             </figcaption>
           </figure>
@@ -71,28 +71,28 @@
 
         <article class="stats">
           <section class="stats__general">
-            <h3 class="stats__general-title">NO.</h3>
-            <p class="stats__general-base" id="pokeOrder">100</p>
+            <h3 class="stats__title">NO.</h3>
+            <p class="stats__base" id="pokeOrder">100</p>
           </section>
           <section class="stats__general">
-            <h3 class="stats__general-title">LEVEL</h3>
-            <p class="stats__general-base" id="pokeLevel">FIRE</p>
+            <h3 class="stats__title">LEVEL</h3>
+            <p class="stats__base" id="pokeLevel">FIRE</p>
           </section>
           <section class="stats__general">
-            <h3 class="stats__general-title">TYPE</h3>
-            <p class="stats__general-base" id="pokeType">1.7m</p>
+            <h3 class="stats__title">TYPE</h3>
+            <p class="stats__base" id="pokeType">1.7m</p>
           </section>
           <section class="stats__general">
-            <h3 class="stats__general-title">ABILITY</h3>
-            <p class="stats__general-base" id="pokeAbility">19.0kg</p>
+            <h3 class="stats__title">ABILITY</h3>
+            <p class="stats__base" id="pokeAbility">19.0kg</p>
           </section>
           <section class="stats__general">
-            <h3 class="stats__general-title">HEIGHT</h3>
-            <p class="stats__general-base" id="pokeHeight">45m.</p>
+            <h3 class="stats__title">HEIGHT</h3>
+            <p class="stats__base" id="pokeHeight">45m.</p>
           </section>
           <section class="stats__general">
-            <h3 class="stats__general-title">WEIGHT</h3>
-            <p class="stats__general-base" id="pokeWeight">142kg.</p>
+            <h3 class="stats__title">WEIGHT</h3>
+            <p class="stats__base" id="pokeWeight">142kg.</p>
           </section>
         </article>
       </main>
@@ -101,33 +101,33 @@
         <h3 class="footer__title">OTHERS</h3>
 
         <div class="footer__minis">
-          <figure class="footer__minis-poke">
+          <figure class="footer__figure">
             <img
-              class="footer__minis-img"
+              class="footer__img"
               src="images/sq.png"
               alt="iconBlack"
               id="poke1"
             />
           </figure>
-          <figure class="footer__minis-poke">
+          <figure class="footer__figure">
             <img
-              class="footer__minis-img"
+              class="footer__img"
               src="images/Raichu.png"
               alt="iconBlack"
               id="poke2"
             />
           </figure>
-          <figure class="footer__minis-poke">
+          <figure class="footer__figure">
             <img
-              class="footer__minis-img"
+              class="footer__img"
               src="images/bb.png"
               alt="iconBlack"
               id="poke3"
             />
           </figure>
-          <figure class="footer__minis-poke">
+          <figure class="footer__figure">
             <img
-              class="footer__minis-img"
+              class="footer__img"
               src="images/duc.png"
               alt="iconBlack"
               id="poke4"
